$Id: ChangeLog,v 1.379 2007/06/03 08:54:04 haraldkipp Exp $

2007-06-01  Harald Kipp  <harald.kipp@egnite.de>

	* app/caltime/caltime.c, app/caltime/Makefile, app/Makefile:
	New application sample demonstrates calendar functions.

	* conf/ethernut30d.conf: Rev-D boards failed to work with latest
	Nut/OS release.

	* crt/time.c: Bug #1724015 fixed. Thanks to Andreas Helmcke.
	Simplified code in time().

	* dev/x12rtc.c: Automatic detection of X1226 or X1286. Fixed
	wrong century determination for X1226. Debugging output added.

	* include/dev/board.h: RTC_CHIP definition now visible for
	ETHERNUT3 and MMNET02 only. 

	* include/dev/x12rtc.h: Wrong watchdog mode bit fixed.


2007-05-24  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/dev/irblast.c, include/dev/irblast.h: New driver from 
	Przemyslaw Rudy sends modulated infrared remote control codes 
	using a simple IR LED. Cool.


2007-05-23  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/dev/ace.c: Added two more interfaces. Thanks to
	Przemyslaw Rudy.

	* arch/avr/dev/tlc16c550.c, include/dev/tlc16c550.h: Update 
	provided by Przemyslaw Rudy.


2007-05-22  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/dm9000e.c: Added some delay befor reading the status 
	of the received packet. Fixes bug #1672527, thanks to Andreas Helmcke.

	* dev/npluled.c: NplUledStatus was looking at the MMC line not the 
	LED line when returning the status. Fixes bug #1711622, thanks to
	Douglas Pearless.


2007-05-02  Matthias Ringwald <mringwal@inf.ethz.ch>
        * include/stdio_nut_wrapper: Removed mapping of _write_P to _write
        for non Harvard architectures (is now already done in include/io.h)

2007-05-02  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Pre-release 4.3.3 alpha.

	* Makedefs.avr-gccdbg, Makerules.avr-gccdbg, 
	app/Makedefs.avr-gccdbg, app/Makerules.avr-gccdbg: Enables AVR 
	debugging. Same ugly solution which I already used for the ARM.
